Changed coolant material and burnup configuration.

--- a/1_Openmc_post_processing.ipynb
+++ b/1_Openmc_post_processing.ipynb
@@ -405,7 +405,7 @@
    },
    "outputs": [],
    "source": [
-    "reactors = ['Ref_PWR', 'SPWR', 'HTGR', 'HPR', 'HTGR_FCM', 'SFR']\n",
+    "reactors = ['Ref_PWR', 'SPWR', 'HTGR', 'HPR', 'HTGR_FCM_HE_NOSOD', 'SFR']\n",
     "workspace_path = '/Users/krishnasunder/Desktop/workspace/R2R4SNF/'\n",
     "\n",
     "for reactor in reactors:\n",
